--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -32,6 +32,11 @@
                 </tr>
                 </thead>
             </table>
+
+            <ul class="nav nav-pills">
+                <li th:each="page, status:${pages}">
+                    <a th:class="${currentPage==status.index?'btn btn-info ms-1':'btn btn-outline-info ms-1'}" th:href="@{/index(page=${status.index})}" th:text="${status.index+1}"></a>
+            </ul>
         </div>
     </div>
 </div>
