--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="/webjars/bootstrap/5.3.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/webjars/bootstrap-icons/1.11.3/font/bootstrap-icons.css">
 </head>
 <body>
 <div class="p-3">
@@ -12,6 +13,14 @@
             Liste des patients
         </div>
         <div class="card-body">
+            <form method="get" th:action="@{index}">
+                <label>Keyword :</label>
+                <input type="text" name="keyword" th:value="${keyword}">
+                <button type="submit" class="btn btn-info">
+                    <i class="bi bi-search"></i>
+                </button>
+            </form>
+
             <table class="table">
                 <thead>
                 <tr>
@@ -29,6 +38,11 @@
                     <td th:text="${p.dateNaissance}"></td>
                     <td th:text="${p.malade}"></td>
                     <td th:text="${p.score}"></td>
+                    <td>
+                        <a onclick="javascript:return confirm('Êtes-vous sûr?')" th:href="@{delete(id=${p.id}, keyword=${keyword}, page=${currentPage})}" class="btn btn-danger">
+                            <i class="bi bi-trash"></i>
+                        </a>
+                    </td>
                 </tr>
                 </thead>
             </table>
