--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="fr" xmlns:th="http://thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="template">
 <head>
     <meta charset="UTF-8">
     <title>Liste des Patients</title>
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-
+<div layout:fragment="content1">
 <div class="container mt-4">
     <h2 class="text-center">Liste des Patients</h2>
 
@@ -67,6 +67,6 @@
         </ul>
     </nav>
 </div>
-
+</div>
 </body>
 </html>
