Add a Form for adding patients

--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -33,7 +33,7 @@
             [Username]
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" th:href="@{/formPatients}">Logout</a></li>
+            <li><a class="dropdown-item" href="#">Logout</a></li>
           </ul>
         </li>
       </ul>
