--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -5,11 +5,6 @@
     <title>Liste des Patients</title>
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <style>
-        .actions-column {
-            width: 100px;
-        }
-    </style>
 </head>
 <body>
 <div layout:fragment="content1">
@@ -46,6 +41,8 @@
             <td th:text="${patient.malade ? 'Oui' : 'Non'}"></td>
             <td th:text="${patient.score}"></td>
             <td class="actions-column">
+                <a th:href="@{editPatient(id=${patient.id}, page=${currentPage}, keyword=${keyword})}"
+                   class="btn btn-warning btn-sm">Modifier</a>
                 <a th:href="@{/delete(id=${patient.id}, keyword=${keyword}, page=${currentPage})}"
                    class="btn btn-danger btn-sm"
                    onclick="return confirm('Voulez-vous vraiment supprimer ce patient ?');">
