--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -12,7 +12,7 @@
     <h2 class="text-center">Liste des Patients</h2>
 
     <!-- Formulaire de recherche -->
-    <form method="get" th:action="@{/index}" class="mb-3 d-flex">
+    <form method="get" th:action="@{/user/index}" class="d-flex align-items-center mb-3">
         <input type="text" name="keyword" class="form-control me-2"
                placeholder="Rechercher un patient..."
                th:value="${keyword}">
@@ -29,7 +29,7 @@
             <th>Date de Naissance</th>
             <th>Malade</th>
             <th>Score</th>
-            <th class="actions-column">Actions</th>
+            <th th:if="${#authorization.expression('hasRole(''ADMIN'')')}">Actions</th>
         </tr>
         </thead>
         <tbody>
@@ -40,14 +40,10 @@
             <td th:text="${#dates.format(patient.dateNaissance, 'dd/MM/yyyy')}"></td>
             <td th:text="${patient.malade ? 'Oui' : 'Non'}"></td>
             <td th:text="${patient.score}"></td>
-            <td class="actions-column">
-                <a th:href="@{editPatient(id=${patient.id}, page=${currentPage}, keyword=${keyword})}"
-                   class="btn btn-warning btn-sm">Modifier</a>
-                <a th:href="@{/delete(id=${patient.id}, keyword=${keyword}, page=${currentPage})}"
-                   class="btn btn-danger btn-sm"
-                   onclick="return confirm('Voulez-vous vraiment supprimer ce patient ?');">
-                    Supprimer
-                </a>
+            <td class="actions-column" th:if="${#authorization.expression('hasRole(''ADMIN'')')}">
+                <a th:href="@{/admin/editPatient(id=${p.id}, page=${currentPage}, keyword=${keyword})}" class="btn btn-warning btn-sm">Modifier</a>
+                <a th:href="@{/admin/delete(id=${p.id}, keyword=${keyword}, page=${currentPage})}" class="btn btn-danger"
+                    onclick="return confirm('Voulez-vous vraiment supprimer ce patient ?');">Supprimer</a>
             </td>
         </tr>
         </tbody>
@@ -58,7 +54,7 @@
         <ul class="nav nav-pills">
             <li th:each="pageNumber : ${#numbers.sequence(0, pages.length - 1)}">
                 <a th:class="${currentPage==pageNumber?'btn btn-info ms-1':'btn btn-outline-info ms-1'}"
-                   th:href="@{/index(page=${pageNumber}, keyword=${keyword})}"
+                   th:href="@{/user/index(page=${pageNumber}, keyword=${keyword})}"
                    th:text="${pageNumber+1}"></a>
             </li>
         </ul>
