--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -11,7 +11,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" th:href="@{index}">Home</a>
+    <a class="navbar-brand" th:href="@{/user/index}">Home</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -22,8 +22,8 @@
             Patients
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" th:href="@{/formPatients}">Nouveau</a></li>
-            <li><a class="dropdown-item" th:href="@{index}">Chercher</a></li>
+            <li th:if="${#authorization.expression('hasRole(''ADMIN'')')}"><a class="dropdown-item" th:href="@{/admin/formPatients}" >Nouveau</a></li>
+            <li><a class="dropdown-item" th:href="@{/user/index}">Chercher</a></li>
           </ul>
         </li>
       </ul>
